@@ -4,6 +4,7 @@ ver 0.19.18 (not yet released)
   - ffmpeg: log detailed error message
   - ffmpeg: support FFmpeg 3.1
   - sidplay: detect libsidplay2 with pkg-config
+  - sidplay: log detailed error message
 * output
   - shout: recognize setting "encoder" instead of "encoding"
 * require gcc 4.7 or newer
